--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>BarberShop</title>
   </head>
   <body>
-    <header class="header">
+    <header class="head">
       <div class="container header-container">
         <nav class="site-nav">
           <!-- <a href="./index.html">
@@ -89,7 +89,9 @@
           </ul>
           <div class="wrap-text-about">
             <p class="sec-about-p-one">About</p>
-            <h2 class="header about-header">Best Barbershop in your city</h2>
+            <h2 class="site-header about-header">
+              Best Barbershop in your city
+            </h2>
             <h3 class="wrap-text-header">
               If you want to add more confidence to your image, you should
               definitely visit us.
@@ -113,9 +115,11 @@
             <svg width="10" height="10">
               <use></use>
             </svg>
-            <p class="wrap-text">Spend your time with the best masters</p>
+            <p class="site-wrap-text price-text">
+              Spend your time with the best masters
+            </p>
           </div>
-          <h2 class="header price-header">Services and prices</h2>
+          <h2 class="site-header price-header">Services and prices</h2>
           <div class="price-block">
             <ul class="left-price-block">
               <li class="price-item">Men’s haircut</li>
@@ -136,11 +140,126 @@
         </div>
       </section>
       <section class="people-section">
-        <div class="container container-people"></div>
+        <div class="container container-people">
+          <div class="left-wrap">
+            <ul class="left-wrap-list">
+              <li class="left-wrap-item">
+                <div class="wrapper-text">
+                  <p class="left-wrap-text">600<span>+</span></p>
+                  <p class="left-wrap-p">Satisfied customers per day</p>
+                </div>
+              </li>
+              <li class="left-wrap-item">
+                <div class="wrapper-text">
+                  <p class="left-wrap-text">600<span>+</span></p>
+                  <p class="left-wrap-p">Satisfied customers per day</p>
+                </div>
+              </li>
+            </ul>
+            <ul class="left-wrap-list add-wrap">
+              <li class="left-wrap-item">
+                <div class="wrapper-text">
+                  <p class="left-wrap-text">600<span>+</span></p>
+                  <p class="left-wrap-p">Satisfied customers per day</p>
+                </div>
+              </li>
+              <li class="left-wrap-item">
+                <div class="wrapper-text">
+                  <p class="left-wrap-text">600<span>+</span></p>
+                  <p class="left-wrap-p">Satisfied customers per day</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="right-wrap">
+            <ul class="right-wrap-block">
+              <li class="wrap-list">
+                <svg wight="10" height="10">
+                  <use href="#"></use>
+                </svg>
+                <p class="site-wrap-text people-text">Old traditional school</p>
+              </li>
+              <li>
+                <h2 class="site-header people-header">
+                  ¿Why people come to us?
+                </h2>
+              </li>
+              <li class="wrap-list-text">
+                Only good things are said about us. But it's better to see and
+                feel 1 time than read 10 times.
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <section class="barbers-section">
-        <div class="container container-barbers"></div>
+        <div class="container container-barbers">
+          <p class="site-wrap-text text-barbers">
+            For true enjoyers of the atmosphere
+          </p>
+          <h2 class="site-header header-beabers">Our barbers</h2>
+        </div>
       </section>
+
+      <section class="latin-section">
+        <div class="container container-beard">
+          <p class="site-wrap-text text-beard">
+            In Latin, "barba" means "beard"
+          </p>
+          <h2 class="site-header visually-hidden">Beard</h2>
+          <div class="beard-block">
+            <ul class="beard-list">
+              <li>
+                <img
+                  width="270"
+                  height="360"
+                  src="./img/beard_1-min.jpg"
+                  alt="beard"
+                />
+              </li>
+              <li>
+                <img
+                  width="270"
+                  height="360"
+                  src="./img/beard_2-min.jpg"
+                  alt="beard"
+                />
+              </li>
+              <li>
+                <img
+                  width="270"
+                  height="360"
+                  src="./img/beard_3-min.jpg"
+                  alt="beard"
+                />
+              </li>
+              <li>
+                <img
+                  width="270"
+                  height="360"
+                  src="./img/beard_4-min.jpg"
+                  alt="beard"
+                />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="booking-section">
+        <div class="container booking-container">
+          <div class="left-box">
+            <h2 class="site-header online-header"></h2>
+            <form action="" class="booking-form"></form>
+          </div>
+          <div class="rightbox">
+            <h2 class="site-header online-header"></h2>
+            <address class="addr-box"></address>
+            <p class="site-wrap-text addr-text"></p>
+            <p class="hour-text"></p>
+          </div>
+        </div>
+      </section>
+
       <div class="empty-block"></div>
     </main>
   </body>
